include/sweeteditor/c_api.h

/// Batch set gutter icons for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
///             u32 entry_count,
///             [u32 line, u32 icon_count, [i32 icon_id] x icon_count] x entry_count
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_batch_line_gutter_icons(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Set max gutter icon count (affects reserved gutter width)
/// @param count Max icon count (0=no reserved space)
EDITOR_API const uint8_t* editor_set_max_gutter_icons(intptr_t editor_handle, uint32_t count, size_t* out_size);
/// Clear all gutter icons
EDITOR_API const uint8_t* editor_clear_gutter_icons(intptr_t editor_handle, size_t* out_size);
/// Set CodeLens items for specified line (compact binary)
/// @param data payload(LE):
///             u32 line, u32 item_count, then repeat for item_count groups:
///             [i32 column, i32 command_id, u32 text_len, u8[text_len] text_utf8]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_line_codelens(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Batch set CodeLens items for multiple lines (compact binary)
/// @param data payload(LE):
///             u32 entry_count,
///             [u32 line, u32 item_count,
///              [i32 column, i32 command_id, u32 text_len, u8[text_len] text_utf8] x item_count] x entry_count
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_batch_line_codelens(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Clear all CodeLens items
EDITOR_API const uint8_t* editor_clear_codelens(intptr_t editor_handle, size_t* out_size);
/// Set link ranges for specified line (compact binary)
/// @param data payload(LE):
///             u32 line, u32 link_count, then repeat for link_count groups:
///             [u32 column, u32 length, u32 target_len, u8[target_len] target_utf8]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_line_links(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Batch set link ranges for multiple lines (compact binary)
/// @param data payload(LE):
///             u32 entry_count,
///             [u32 line, u32 link_count,
///              [u32 column, u32 length, u32 target_len, u8[target_len] target_utf8] x link_count] x entry_count
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_batch_line_links(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Clear all link ranges
EDITOR_API const uint8_t* editor_clear_links(intptr_t editor_handle, size_t* out_size);
/// Resolve link target by line and column inside that link
/// @return UTF8 target string; caller owns returned buffer and must free it with free_u8_string.
///         Returns an empty string when no link matches the requested position.
EDITOR_API const char* editor_get_link_target_at(intptr_t editor_handle, size_t line, size_t column);
/// Set diagnostic decoration ranges for specified line (compact binary)
/// @param data payload(LE):
///             u32 line, u32 diag_count, then repeat for diag_count groups
///             [u32 column, u32 length, i32 severity]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_line_diagnostics(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Batch set diagnostic decorations for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
///             u32 entry_count,
///             [u32 line, u32 diag_count, [u32 column, u32 length, i32 severity] x diag_count] x entry_count
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_batch_line_diagnostics(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Clear all diagnostic decorations
EDITOR_API const uint8_t* editor_clear_diagnostics(intptr_t editor_handle, size_t* out_size);
/// Set indent guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_indent_guides(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Set bracket branch guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups:
///             [u32 parent_line, u32 parent_column, u32 end_line, u32 end_column,
///              u32 child_count, then repeat child_count groups: [u32 child_line, u32 child_column]]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_bracket_guides(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Set control-flow back-arrow guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_flow_guides(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Set horizontal separator guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [i32 line, i32 style, i32 count, u32 text_end_column]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_separator_guides(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Clear all code structure lines (indent guides, bracket guides, control-flow arrows, separators)
EDITOR_API const uint8_t* editor_clear_guides(intptr_t editor_handle, size_t* out_size);
/// Set bracket pair list (override default (){}[])
/// @param open_chars Open bracket char array (UTF-32)
/// @param close_chars Close bracket char array (UTF-32)
/// @param count Bracket pair count
EDITOR_API const uint8_t* editor_set_bracket_pairs(intptr_t editor_handle, const uint32_t* open_chars, const uint32_t* close_chars, size_t count, size_t* out_size);
/// Set auto-closing pair list (empty count = disable auto-closing)
/// @param open_chars Open char array (UTF-32)
/// @param close_chars Close char array (UTF-32)
/// @param count Pair count
EDITOR_API const uint8_t* editor_set_auto_closing_pairs(intptr_t editor_handle, const uint32_t* open_chars, const uint32_t* close_chars, size_t count, size_t* out_size);
/// Externally set exact bracket match result (override built-in char scan)
/// @param open_line open bracket line number(0-based)
/// @param open_col open bracket column number (0-based)
/// @param close_line close bracket line number(0-based)
/// @param close_col close bracket column number (0-based)
EDITOR_API const uint8_t* editor_set_matched_brackets(intptr_t editor_handle, size_t open_line, size_t open_col, size_t close_line, size_t close_col, size_t* out_size);
/// Clear externally set bracket match result (fall back to built-in char scan)
EDITOR_API const uint8_t* editor_clear_matched_brackets(intptr_t editor_handle, size_t* out_size);
/// Set foldable region list (compact binary)
/// @param data payload(LE):
///             u32 region_count, then repeat for region_count groups
///             [u32 start_line, u32 end_line]
/// @param size payload byte length
EDITOR_API const uint8_t* editor_set_fold_regions(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Toggle fold state of specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_toggle_fold(intptr_t editor_handle, size_t line, size_t* out_size);
/// Free UTF-8 string memory allocated on C++ side
/// @param string_ptr String pointer
EDITOR_API void free_u8_string(intptr_t string_ptr);