platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Batch set gutter icons for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 icon_count, [i32 icon_id] x icon_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_gutter_icons(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set max gutter icon count (affects reserved gutter width)
/// @param count Max icon count (0=no reserved space)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Uint32, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_max_gutter_icons(
  int editor_handle,
  int count,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all gutter icons
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_gutter_icons(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set CodeLens items for specified line (compact binary)
/// @param data payload(LE):
/// u32 line, u32 item_count, then repeat for item_count groups:
/// [i32 column, i32 command_id, u32 text_len, u8[text_len] text_utf8]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_codelens(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set CodeLens items for multiple lines (compact binary)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 item_count,
/// [i32 column, i32 command_id, u32 text_len, u8[text_len] text_utf8] x item_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_codelens(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all CodeLens items
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_codelens(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set link ranges for specified line (compact binary)
/// @param data payload(LE):
/// u32 line, u32 link_count, then repeat for link_count groups:
/// [u32 column, u32 length, u32 target_len, u8[target_len] target_utf8]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_links(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set link ranges for multiple lines (compact binary)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 link_count,
/// [u32 column, u32 length, u32 target_len, u8[target_len] target_utf8] x link_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_links(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all link ranges
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_links(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Resolve link target by line and column inside that link
/// @return UTF8 target string; caller owns returned buffer and must free it with free_u8_string.
/// Returns an empty string when no link matches the requested position.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.IntPtr, ffi.Size, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Char> editor_get_link_target_at(
  int editor_handle,
  int line,
  int column,
);

/// Set diagnostic decoration ranges for specified line (compact binary)
/// @param data payload(LE):
/// u32 line, u32 diag_count, then repeat for diag_count groups
/// [u32 column, u32 length, i32 severity]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_diagnostics(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set diagnostic decorations for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 diag_count, [u32 column, u32 length, i32 severity] x diag_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_diagnostics(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all diagnostic decorations
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_diagnostics(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set indent guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_indent_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set bracket branch guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups:
/// [u32 parent_line, u32 parent_column, u32 end_line, u32 end_column,
/// u32 child_count, then repeat child_count groups: [u32 child_line, u32 child_column]]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_bracket_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set control-flow back-arrow guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_flow_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set horizontal separator guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [i32 line, i32 style, i32 count, u32 text_end_column]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_separator_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all code structure lines (indent guides, bracket guides, control-flow arrows, separators)
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_guides(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set bracket pair list (override default (){}[])
/// @param open_chars Open bracket char array (UTF-32)
/// @param close_chars Close bracket char array (UTF-32)
/// @param count Bracket pair count
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_bracket_pairs(
  int editor_handle,
  ffi.Pointer<ffi.Uint32> open_chars,
  ffi.Pointer<ffi.Uint32> close_chars,
  int count,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set auto-closing pair list (empty count = disable auto-closing)
/// @param open_chars Open char array (UTF-32)
/// @param close_chars Close char array (UTF-32)
/// @param count Pair count
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_auto_closing_pairs(
  int editor_handle,
  ffi.Pointer<ffi.Uint32> open_chars,
  ffi.Pointer<ffi.Uint32> close_chars,
  int count,
  ffi.Pointer<ffi.Size> out_size,
);

/// Externally set exact bracket match result (override built-in char scan)
/// @param open_line open bracket line number(0-based)
/// @param open_col open bracket column number (0-based)
/// @param close_line close bracket line number(0-based)
/// @param close_col close bracket column number (0-based)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_matched_brackets(
  int editor_handle,
  int open_line,
  int open_col,
  int close_line,
  int close_col,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear externally set bracket match result (fall back to built-in char scan)
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_matched_brackets(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set foldable region list (compact binary)
/// @param data payload(LE):
/// u32 region_count, then repeat for region_count groups
/// [u32 start_line, u32 end_line]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_fold_regions(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Toggle fold state of specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Size, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_toggle_fold(
  int editor_handle,
  int line,
  ffi.Pointer<ffi.Size> out_size,
);
